<resources>
    <string name="notify_channel_id" translatable="false">General</string>
    <string name="app_name">Expro99 Store</string>
    <string name="copyright">2025 Expro99 Store</string>
    <string name="exit_tap_twice">Tap twice to exit</string>
    <string name="no_data">No records found</string>
    <string name="new_notification">You received a new notification.</string>
    <string name="search_hint">Search</string>
    <string name="copied">Copied to clipboard</string>
    <string name="button_confirm">Confirm</string>
    <string name="common_okay">Okay</string>
    <string name="session_expired_title">Session Expired</string>
    <string name="session_expired_desc">Your session has expired. Please log in again</string>
    <string name="session_expired_button">Log In</string>
    <string name="splash_version_title">Upgrade to the latest version?</string>
    <string name="splash_version_desc">The current version v%s\nPlease install the latest version v%s</string>
    <string name="splash_version_confirm">Confirm</string>
    <string name="splash_version_cancel">Skip</string>
    <string name="login_welcome">Welcome</string>
    <string name="login_hint_username">Username</string>
    <string name="login_hint_password">Password</string>
    <string name="login_button">Login</string>
    <string name="login_change_language">Change language</string>
    <string name="login_invalid_credentials">Invalid Username or Password</string>
    <string name="dashboard_amount">Store Amount</string>
    <string name="dashboard_income">Today\’s Income</string>
    <string name="dashboard_alert">Less than 50%</string>
    <string name="dashboard_alert_success">Success notification</string>
    <string name="dashboard_yxi_count">Game Count</string>
    <string name="dashboard_player_count">Player Count</string>
    <string name="dashboard_account_new">Create Account</string>
    <string name="dashboard_account_password">Change Password</string>
    <string name="dashboard_account_block">Block User</string>
    <string name="dashboard_action_top_up">Top Up</string>
    <string name="dashboard_action_withdraw">Withdraw</string>
    <string name="dashboard_action_history">Transaction History</string>
    <string name="dashboard_action_setting">Personal Settings</string>
    <string name="dashboard_search_title">Search</string>
    <string name="dashboard_search_hint">Search phone number, username or user ID</string>
    <string name="dashboard_search_check_details">View Details</string>
    <string name="action_main_top_up_title">Top Up</string>
    <string name="action_main_top_up_desc">Enter phone number or user ID or\nchoose other method</string>
    <string name="action_main_top_up_option_qr">Scan QR code to top up</string>
    <string name="action_main_top_up_option_yxi">Top up to game account</string>
    <string name="action_main_withdraw_title">Withdraw</string>
    <string name="action_main_withdraw_desc">Enter phone number or user ID or\nchoose other method</string>
    <string name="action_main_withdraw_option_qr">Scan QR code</string>
    <string name="action_main_withdraw_option_yxi">Search game account</string>
    <string name="action_main_create_user_title">Create User</string>
    <string name="action_main_create_user_desc">Enter phone number or\nchoose other method</string>
    <string name="action_main_create_user_option_random">Create Random Account</string>
    <string name="action_main_create_user_option_yxi">Create Game Account</string>
    <string name="action_main_create_random_title">Create Random Account</string>
    <string name="action_main_create_random_desc">Click Confirm to\nCreate Random Account</string>
    <string name="action_main_change_password_title">Change User Password</string>
    <string name="action_main_change_password_desc">Enter phone number or\nclick upper right corner to scan and search</string>
    <string name="action_main_block_title">Block/Ban User</string>
    <string name="action_main_block_desc">Enter phone number to proceed</string>
    <string name="action_main_block_reason_hint">Block reason (optional)</string>
    <string name="action_main_block_reason_success_title">Block User</string>
    <string name="action_main_block_reason_success_desc">Reason submitted</string>
    <string name="action_main_block_reason_success_okay">Okay</string>
    <string name="action_main_hint_format">eg. 60121234567</string>
    <string name="action_main_hint_search">Phone Number / ID</string>
    <string name="action_main_hint_phone">Phone Number</string>
    <string name="action_main_button_search">Search</string>
    <string name="action_main_button_create">Create</string>
    <string name="action_main_button_confirm">Confirm</string>
    <string name="action_main_button_cancel">Cancel</string>
    <string name="details_player_title">Player Details</string>
    <string name="details_user_title">Account Detail</string>
    <string name="details_account_id">Account ID</string>
    <string name="details_phone">Phone Number</string>
    <string name="details_password">Password</string>
    <string name="details_yxi_password">Game Password</string>
    <string name="details_yxi">Game</string>
    <string name="details_join_date">Joining Date</string>
    <string name="details_account_balance">Account Balance</string>
    <string name="details_player_id">Game Account ID</string>
    <string name="details_yxi_balance">Game Current Balance</string>
    <string name="details_hint_top_up_amount">Top Up Amount</string>
    <string name="details_hint_withdraw_amount">Withdraw Amount</string>
    <string name="details_button_top_up">Top Up</string>
    <string name="details_button_withdraw">Withdraw</string>
    <string name="details_button_next">Next Step</string>
    <string name="details_button_block">Block</string>
    <string name="details_button_change_password">Change Password</string>
    <string name="details_button_cancel">Cancel</string>
    <string name="success_action_top_up_title">RM%s\nTop Up Successfully</string>
    <string name="success_action_top_up_another">Top Up Another Account</string>
    <string name="success_action_withdraw_title">RM%s\nWithdraw Successfully</string>
    <string name="success_action_withdraw_another">Withdraw Another Account</string>
    <string name="success_action_create_user_title">Create Member Successfully</string>
    <string name="success_action_create_user_desc">OTP has been sent to member\'s phone number</string>
    <string name="success_action_create_user_another">Create another new member</string>
    <string name="success_action_create_user_random_title">Create random member successfully</string>
    <string name="success_action_change_password_title">Change Password Successfully</string>
    <string name="success_action_change_password_desc">OTP has been sent to member\'s phone number</string>
    <string name="success_action_change_password_another">Change another member password</string>
    <string name="success_action_block_title">Blocked Member</string>
    <string name="success_action_block_desc">This user has been restricted</string>
    <string name="success_action_block_submit">Submit</string>
    <string name="success_action_block_another">Block Another Member</string>
    <string name="success_action_create_player_title">Game Account Created Successfully</string>
    <string name="success_action_create_player_another">Create Another Game Acccount</string>
    <string name="success_action_feedback_title">Feedback Successfully</string>
    <string name="success_action_feedback_desc">Thank You for Your Feedback</string>
    <string name="success_action_connect_printer_title">Printer connected successfully</string>
    <string name="success_action_connect_printer_desc">Test printing in progress…</string>
    <string name="success_action_home">Back to Main Page</string>
    <string name="success_action_print">Print</string>
    <string name="success_action_top_up">Go to Top Up</string>
    <string name="yxi_title">Choose Game</string>
    <string name="yxi_select_yxi">Please select a game</string>
    <string name="yxi_search_hint">Search Game</string>
    <string name="yxi_create_player">Create Game Account</string>
    <string name="yxi_next">Next Step</string>
    <string name="player_search_id_hint">Player ID</string>
    <string name="player_search_button_search">Search</string>
    <string name="player_search_button_back">Back to Choose Game</string>
    <string name="player_search_hint_top_up">Top up amount</string>
    <string name="player_search_hint_withdraw">Withdrawal amount</string>
    <string name="transaction_title">Transactions</string>
    <string name="transaction_tab_all">All</string>
    <string name="transaction_tab_user">Creation History</string>
    <string name="transaction_tab_top_up">Member Top Up</string>
    <string name="transaction_tab_withdraw">Member Withdraw</string>
    <string name="transaction_tab_manager_settlement">Manager Settlement</string>
    <string name="transaction_type_user">Create User</string>
    <string name="transaction_type_user_random">Create Random User</string>
    <string name="transaction_type_user_player">Create Player</string>
    <string name="transaction_type_top_up">Member Top Up</string>
    <string name="transaction_type_yxi_top_up">Game Top Up</string>
    <string name="transaction_type_withdraw">Member Withdraw</string>
    <string name="transaction_type_yxi_withdraw">Game Withdraw</string>
    <string name="transaction_type_manager_settlement">Manager Settlement</string>
    <string name="transaction_type_manager_top_up">Manager Top Up</string>
    <string name="transaction_type_close_shop">Close Shop</string>
    <string name="transaction_type_unknown">Unknown</string>
    <string name="transaction_search_hint">Search Manager</string>
    <string name="transaction_details_title">Transaction Details</string>
    <string name="transaction_date">Transaction Date</string>
    <string name="transaction_member_id">Member ID</string>
    <string name="transaction_phone">Phone Number</string>
    <string name="transaction_player_id">Player ID</string>
    <string name="transaction_manager">Manager</string>
    <string name="transaction_payment_mode">Transaction Mode</string>
    <string name="transaction_status">Status</string>
    <string name="transaction_remarks">Remarks</string>
    <string name="profile_setting_user_name">Shop Name</string>
    <string name="profile_setting_user_country">Country</string>
    <string name="profile_setting_user_state">State</string>
    <string name="profile_setting_user_area">Area</string>
    <string name="profile_setting_user_qr">QR Code</string>
    <string name="profile_feedback_subject_title">Feedback Title</string>
    <string name="profile_feedback_content_count">0/1000</string>
    <string name="profile_feedback_upload">Upload Image</string>
    <string name="profile_feedback_upload_gallery">Photo Gallery</string>
    <string name="profile_feedback_upload_camera">Camera</string>
    <string name="profile_feedback_upload_cancel">Cancel</string>
    <string name="profile_feedback_note">* This feedback and suggestions will be submitted directly to the company leadership and senior management for review.</string>
    <string name="profile_feedback_note_desc">The company places high importance on feedback and suggestions from every employee.\nAll content will be handled with a serious, professional, and prudent attitude.</string>
    <string name="profile_feedback_submit">Submit</string>
    <string name="language_english">English</string>
    <string name="cd_icon">Icon</string>
    <string name="cd_qr">QR</string>
    <string name="cd_image">Image</string>
    <string name="qr_user_app_download_title">User App QR Code</string>
    <string name="qr_user_app_download_desc">Scan to download the user app</string>
</resources>