<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <ImageView
                android:layout_width="86dp"
                android:layout_height="86dp"
                android:layout_marginVertical="40dp"
                android:contentDescription="@string/cd_icon"
                android:src="@drawable/ic_success_block" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/success_action_block_title"
                android:textColor="@color/gold_FFCB22"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textView_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/success_action_block_desc"
                android:textColor="@color/gray_C2C3CB"
                android:textSize="20sp" />

            <com.dj.shop.widget.RoundedEditTextView
                android:id="@+id/editText_reason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp" />

            <com.dj.shop.widget.SolidTextButton
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/success_action_block_submit" />

            <TextView
                android:id="@+id/textView_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_medium"
                android:padding="20dp"
                android:text="@string/success_action_block_another"
                android:textColor="@color/white_FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>