<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#80000000"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="130dp"
        android:background="@drawable/bg_qr"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView_collapse"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:contentDescription="@string/cd_icon"
            android:padding="12dp"
            android:src="@drawable/ic_collapse" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:gravity="center"
                android:text="@string/qr_user_app_download_title"
                android:textColor="@color/white_FFFFFF"
                android:textSize="24sp" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/imageView_qr"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/cd_image"
                app:shapeAppearanceOverlay="@style/Radius10ImageView" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="@string/qr_user_app_download_desc"
                android:textColor="@color/white_FFFFFF"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
