<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="50dp"
            android:paddingEnd="25dp">

            <LinearLayout
                android:id="@+id/panel_subject"
                android:layout_width="match_parent"
                android:layout_height="67dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_edit_text"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <TextView
                    android:id="@+id/textView_subject"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:text="@string/profile_feedback_subject_title"
                    android:textColor="@color/gray_C2C3CB"
                    android:textSize="15sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:contentDescription="@string/cd_icon"
                    android:src="@drawable/ic_chev_down" />
            </LinearLayout>

            <com.dj.shop.widget.RoundedEditTextView
                android:id="@+id/editText_feedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp" />

            <TextView
                android:id="@+id/textView_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/poppins_medium"
                android:gravity="end"
                android:text="@string/profile_feedback_content_count"
                android:textColor="@color/white_FFFFFF"
                android:textSize="15sp" />

            <com.dj.shop.widget.SolidTextButton
                android:id="@+id/button_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_feedback_upload" />

            <LinearLayout
                android:id="@+id/panel_attachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/cd_icon"
                    android:src="@drawable/ic_attachment" />

                <TextView
                    android:id="@+id/textView_file_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="4dp"
                    android:layout_weight="1"
                    android:ellipsize="marquee"
                    android:fontFamily="@font/poppins_light_italic"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:singleLine="true"
                    android:textColor="@color/white_FFFFFF"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imageView_delete"
                    android:layout_width="26dp"
                    android:layout_height="26dp"
                    android:contentDescription="@string/cd_icon"
                    android:padding="6dp"
                    android:src="@drawable/ic_delete" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/profile_feedback_note"
                android:textColor="@color/white_FFFFFF"
                android:textSize="12sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/poppins_light"
                android:lineSpacingExtra="4sp"
                android:text="@string/profile_feedback_note_desc"
                android:textColor="@color/white_FFFFFF"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <com.dj.shop.widget.SolidTextButton
                android:id="@+id/button_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/profile_feedback_submit" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>