<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_000122"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/view_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="50dp"
            android:paddingEnd="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/profile_setting_user_name"
                android:textColor="@color/white_FFFFFF"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/gray_737373"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/profile_setting_user_country"
                android:textColor="@color/white_FFFFFF"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/gray_737373"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/profile_setting_user_state"
                android:textColor="@color/white_FFFFFF"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/gray_737373"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="3dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/profile_setting_user_area"
                android:textColor="@color/white_FFFFFF"
                android:textSize="19sp" />

            <TextView
                android:id="@+id/textView_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:fontFamily="@font/poppins_semi_bold"
                android:textColor="@color/gray_737373"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/panel_qr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/profile_setting_user_qr"
                    android:textColor="@color/white_FFFFFF"
                    android:textSize="19sp" />

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imageView_qr"
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:background="@color/white_FFFFFF"
                    android:contentDescription="@string/cd_qr"
                    app:shapeAppearanceOverlay="@style/Radius10ImageView" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>