<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Top Background Image -->
    <ImageView
        android:id="@+id/imageView_bg"
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:contentDescription="@string/cd_image"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_login" />

    <ImageView
        android:id="@+id/imageView_logo"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_image"
        android:src="@drawable/img_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView_logo"
        android:layout_marginTop="70dp"
        android:background="@drawable/bg_login_form"
        android:orientation="vertical"
        android:paddingTop="40dp">

        <!-- Scrollable Login Form -->
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <!-- 欢迎 -->
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:gravity="center"
                    android:text="@string/login_welcome"
                    android:textColor="@color/white_FFFFFF"
                    android:textSize="36sp" />

                <!-- Username Field -->
                <com.dj.shop.widget.RoundedEditTextView
                    android:id="@+id/editText_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp" />

                <!-- Password Field -->
                <include
                    android:id="@+id/view_edit_text_password"
                    layout="@layout/view_edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:layout_marginBottom="60dp" />

                <com.dj.shop.widget.SolidTextButton
                    android:id="@+id/button_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="24dp"
                    android:text="@string/login_button" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <LinearLayout
                    android:id="@+id/panel_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="22dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/login_change_language"
                        android:textColor="@color/gray_7B7B7B"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView_language"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.7"
                        android:fontFamily="@font/poppins_medium"
                        android:text="@string/language_english"
                        android:textColor="@color/white_FFFFFF"
                        android:textSize="14sp" />
                </LinearLayout>
                <!-- Footer -->
                <TextView
                    android:id="@+id/textView_player"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:text="@string/copyright"
                    android:textColor="@color/gray_C2C3CB"
                    android:textSize="12sp" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>
